# simpulse-id-credentials

./: .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GAIA_X_COMPREHENSIVE_ANALYSIS.txt  LICENSE  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
artifacts/: README.md
contexts/: AscsAdministratorCredential.json  AscsMemberCredential.json  AscsMembershipCredential.json  AscsParticipantCredential.json  AscsSimpulseIdCredentials.json  AscsUserCredential.json  HarbourCredentials.json  HavenCredential.json  README.md  SimpulseIdCredentials.json  trustframework_2411.ttl  trustframework_dev_13c03bfb.ttl
docs/: credential-relationships.md  did-methods.md  index.md  specifications.md
examples/: README.md  ascs-administrator-credential.json  ascs-base-membership-credential.json  ascs-envited-membership-credential.json  ascs-participant-credential.json  ascs-user-credential.json  member-credential-full.json  member-credential.json  participant-credential-full.json  participant-credential.json  simpulseid-administrator-credential.json  simpulseid-ascs-base-membership-credential.json  simpulseid-ascs-envited-membership-credential.json  simpulseid-participant-credential-v2.json  simpulseid-participant-credential.json  simpulseid-user-censored-credential.json  simpulseid-user-credential.json  user-credential-full.json  user-credential.json
linkml/: README.md  core.yaml  harbour.yaml  importmap.json  simpulseid-core.yaml  simpulseid-credentials.yaml  simpulseid-model.yaml  (+1 more)
(+85 files in other folders)
